fixed footer alignments

--- a/banner2_Card.css
+++ b/banner2_Card.css
@@ -3,19 +3,9 @@
 .card_banner{
     display: flex;
     width: 100%;
+    justify-content: space-between;
 }
-.card_col1{
-    width: 30%;
-    padding-left: 7%;
-}
-.card_col2{
-    width: 40%;
-    padding-left: 3.5%;
-}
-.card_col3{
-    width: 30%;
-    /* padding-right: 7%; */
-}
+
 .card1{
     width: 316px;   
     height: 371px;
@@ -76,8 +66,6 @@
 }
 .card3{
     margin-top: 89.31px;
-    margin-left: 5%;
-    /* padding-right: 13%; */
 }
 
 .card4{
