--- a/banner3 style.css
+++ b/banner3 style.css
@@ -1,9 +1,7 @@
 .Banner3{
     background-image: url(Images/ban3.png);
-    margin-left: 80px;
-    margin-right: 80px;
-    margin-top: 120px;
     display: flex;
+    margin: 120px 7% 0;
 }
 
 .banhead3{
