--- a/banner4.css
+++ b/banner4.css
@@ -1,6 +1,5 @@
 .banner4{
     margin-top: 80px !important;
-    margin-left: 65px;
 }
 /* .card{
     background: linear-gradient(180deg, #282633 0%, #0E0C16 100%);
