--- a/banner8.css
+++ b/banner8.css
@@ -1,9 +1,9 @@
 .banner8{
-    margin-top: 10%;
+    margin-top: 228px;
     margin-left: 7%;
     margin-right: 7%;
     background: #0E0C16;
-    height: 642px;
+    /* height: 642px; */
 }
 .popular_content{
     margin-left: 65px;
@@ -14,11 +14,9 @@
     position: absolute;
 }
 .popu_head{
-    position: absolute;
-    margin-left: 28px;
-    margin-top: 56px;
+
     width: 321px;
-    height: 122px;
+    margin: 56px 0px 85px 90px !important;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
@@ -28,13 +26,16 @@
     /* text-transform: capitalize; */
 }
 .curveimg{
+    position: absolute;
     margin-left: 340px;
-    margin-top: 23%;
+    /* margin-top: 23%; */
     /* width: 171.24px;
     height: 100.94px */
 }
 .chatimg{
-    margin-left: 8%;
+    position: absolute;
+    margin-left: 40px;
+    bottom: 0;
 }
 .popu_para1{
     font-family: 'Montserrat';
@@ -57,6 +58,9 @@
     line-height: 24px;
     color: #9F9EA2;
     text-transform: capitalize;
+}
+.phone_content{
+    position: relative;
 }
 .img-content{
     display: flex;
