--- a/sports style.css
+++ b/sports style.css
@@ -107,9 +107,12 @@
     opacity: 0.8;  
     transform: skew(-6deg);
     background: #0E4CD9; 
-    margin-left: 200px !important;
+    margin-left: 16px !important;
     margin-top: 10px;
     border: none;
+}
+.mt-l-15{
+    margin-left: 15px;
 }
 .btn_text2{
     display: inline-block;
@@ -188,16 +191,15 @@
 }
 .sport_banner{
     background: #1A1822;
-    /* height: 50vh; */
     border-top-right-radius: 35px;
     border-top-left-radius: 35px;
-    /* border: 1px solid white !important; */
+}
+.sportz_feature{
+    padding: 0 7%;
 }
 .title{
-    width: 265px;
-    height: 100px;
-    margin-left: 41%;
     padding-top: 56px;
+    text-align: center;
 }
 .ban_head2{
     font-family: 'Montserrat';
@@ -206,19 +208,15 @@
     font-size: 38px;
     line-height: 110%;
     color: #9F9EA2;
-
+    padding-right: 95px;
 }
 .feature_head{
-    position: absolute;
-    /* background: linear-gradient(90deg, #0E4CD9 0%, rgba(14, 76, 217, 0) 103.25%); */
-    width: 265px;
-    height: 47px;
-    margin-left: 41%;
+    position: relative;
 }
 
 .feature_bg{
-    margin-left: 41%;
-    margin-top: 25px;
+    margin: 0 auto;
+    display: block;
 }
 .ban_head3{  
     color: #FFFFFF;
@@ -226,6 +224,13 @@
     font-style: normal;
     font-weight: 700;
     font-size: 58px;   
+    display: block;
+    background-image: url(Images/Ban2_bg.png);
+    text-align: center;
+    background-position: center;
+    background-repeat: no-repeat;  
+    padding-bottom: 27px;
+    padding-right: 10px;
 }
 
 
